--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "zod": "^4.3.5"
     },
     "optionalDependencies": {
+        "@esbuild/linux-64": "*",
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
         "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
         "lightningcss-linux-x64-gnu": "^1.29.1"
