--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -64,5 +64,30 @@ services:
         networks:
             - laravel-development
 
+    scheduler:
+        # For the workspace service, we will also create a custom image to install and setup all the necessary stuff.
+        build:
+            context: .
+            dockerfile: ./docker/development/workspace/Dockerfile
+            args:
+                UID: ${UID:-1000}
+                GID: ${GID:-1000}
+                XDEBUG_ENABLED: ${XDEBUG_ENABLED:-true}
+                XDEBUG_MODE: develop,coverage,debug,profile
+                XDEBUG_HOST: ${XDEBUG_HOST:-host.docker.internal}
+                XDEBUG_IDE_KEY: ${XDEBUG_IDE_KEY:-DOCKER}
+                XDEBUG_LOG: /dev/stdout
+                XDEBUG_LOG_LEVEL: 0
+        command: ['php', 'artisan', 'schedule:work']
+        restart: always
+        tty: true # Enables an interactive terminal
+        stdin_open: true # Keeps standard input open for 'docker exec'
+        env_file:
+            - .env
+        volumes:
+            - ./:/var/www
+        networks:
+            - laravel-development
+
 networks:
     laravel-development:
