--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "lint": "eslint . --fix",
         "types": "tsc --noEmit",
         "test": "vitest",
+        "test:ci": "vitest run",
         "coverage": "vitest run --coverage"
     },
     "devDependencies": {
